# 50to5-core

./: .gitignore  .gitmodules  .yarn-integrity  README copy.md  package.json  tree.txt  typedoc.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy_docs.yaml  lint_files.yaml  update_submodules.yaml
.next/: trace
50to5-depts/: OAI_CONFIG_LIST.json  pyproject.toml
50to5-depts/agents/: GroupManager.py  GroupManager2.py  base_agent.py  base_manager.py
50to5-depts/agents/Engineering/: base_dev.py
50to5-depts/agents/Executives/: decision_agents.py  discriminator.py  generator.py
50to5-depts/agents/Operations/: Initialization_v1.py  QualityControl.py  StateManagement.py
50to5-depts/agents/Operations/init/: config.json
50to5-depts/schemas/: engineering.json  marketing.json
50to5-orchestration/: README.md  mermaid_chart.md  pyproject.toml  requirements.txt
50to5-orchestration/AirflowDAG/: Airflow_Dependencies.py  Airflow_Enhanced.py  Airflow_Orchestration.py  Airflow_Orchestration2.py  Dockerfile  docker-compose.yml
50to5-orchestration/config/: config_json.json
50to5-orchestration/init_agents/: agent_dependencies.py  dept_config.yml  init_agents.py  init_script.py
50to5-orchestration/init_env/: InitializationAgent.py  QualityControlAgent.py
50to5-orchestration/monitoring/: Dockerfile  monitor.py
50to5-orchestration/notifications/: config.json  sendgrid.py  slackery.py
50to5-reporting/utils/: json_agent.py  notes.md
_notes/: automations.md  backend.md  llm-automations.md  tutorials.md
_notes/architecture/: DB.md
reporting/cost_analysis/: import_data.py  pyproject.toml
src/: .eslintrc.json  .gitignore  Dockerfile  README.md  README.md.bak  package.json
src/backend/: package.json
src/backend/automation_tools/: README.md
src/backend/automation_tools/python/: Dockerfile  pyproject.toml
src/data_sources/substrate/: README.md
src/db/: DB.md  sqlite3_alchemy.py  utils.ts
src/db/vector/: embeddings.ts  ingest.ts  main_vector.ts  models.ts  qdrant_async.ts  upload_quadrant.ts
src/db/vector/transforms/: ingestion_pipeline.ts  vecdb_ingest.ts
src/frontend/.next/: routes-manifest.json  trace
src/frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
src/llmOps/agents/: AGENTS.md
src/llmOps/prompts/: prompt_creator.md
src/middleware/: middleWare.ts
utils/: pyproject.toml
(+19 files in other folders)
