[tool.poetry]
name = "50to5-depts"
version = "0.1.0"
description = "Agentic Departments to perform analysis on the operational effectiveness using an API Server"
authors = ["50to50 <edge@50to50.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
autogen = "^1.0.16"
autogenstudio = "^0.1.3"




[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<8.0.0"
deepevals = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
