[tool.poetry]
name = "50to5-orchestration"
version = "0.1.0"
description = "Instantiation, State Management and Monitoring ovironment"
authors = ["50to5 <edge@50to5.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sendgrid = "^6.11.0"
autogen = "^1.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
