[tool.poetry]
name = "fifty-to-five-py"
version = "0.1.0"
description = "Python tools used for automating processess"
authors = ["snyata <core@synavate.tech>"]
packages = [{include = ["dev", "admin"]}]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
